# aggregateGithubCommits

./: LICENSE.rst  MANIFEST.in  README.md  README.rst  aggregateGithubCommits.py  entry_points.cfg  requirements.txt  setup.cfg
.github/workflows/: pytest.yml
aggregateGithubCommits/: __init__.py  aggregateGithubCommits.py
tests/: conftest.py  test_aggregate_commits.py  test_check_args.py  test_convert_to_csv.py  test_convert_to_text.py  test_extract_commits.py  test_get_commits.py  test_parse_args.py
