[metadata]
name = aggregateGithubCommits
version = attr: aggregateGithubCommits.aggregateGithubCommits.__version__
url = https://github.com/rocaz/aggregateGithubCommits
author = ROCA
author_email = rocaznet@gmail.com
license = CC BY-NC-SA 4.0, non-commercial use only.
keywords = github, github-api, commit, python3
description = aggregateGithubCommits: Aggregate Github commit count by author and time.
long_description = file: README.rst
classifiers =
        Development Status :: 5 - Production/Stable
        Environment :: Console
        Framework :: Pytest
        Intended Audience :: Developers
        Intended Audience :: System Administrators
        License :: Free for non-commercial use
        Natural Language :: English
        Programming Language :: Python
        Programming Language :: Python :: 3 :: Only
        Programming Language :: Python :: 3.7
        Programming Language :: Python :: 3.8
        Programming Language :: Python :: 3.9
        Topic :: Utilities

[options]
zip_safe = False
packages = find:
python_requires = >= 3.7
setup_requires =
    setuptools
    pytest-runner
tests_require =
    pytest
    pytest-cov
install_requires =
    pytz
    tzlocal
    python-dateutil
    PyGithub
    pandas
entry_points = file: entry_points.cfg

[check-manifest]
ignore =
    .coverage
    .git
    .git/*
    .github
    .github/*
    .pytest_cache
    .pytest_cache/*
    __pycache__
    __pycache__/*
    coverage.xml
    htmlcov
    htmlcov/*
    .dependabot
    .dependabot/*
    .coveragerc
    CHANGELOG.rst
    CONTRIBUTING.md
    .travis.yml
    requirements*
    tox.ini
    .changes
    .changes/*
    tests
    tests/*
    scripts
    scripts/*
    doc
    doc/*